# voxel-engine

./: .gitignore  CMakeLists.txt  README.md
shaders/: triangle.frag  triangle.vert
src/: App.cpp  App.hpp  Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Input_handler.cpp  Input_handler.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  debug.cpp  debug.hpp  main.cpp
